# activities-agent

./: .gitignore  .lintstagedrc-commit.json  .lintstagedrc-push.json  .lintstagedrc.json  README.md  eslint.config.mjs  package.json
.cursor/: rules  worktrees.json
.github/workflows/: ci.yml
.husky/: pre-commit  pre-push
assistant-ui/: next.config.ts  package-lock.json  package.json
assistant-ui/app/: assistant.tsx
assistant-ui/components/assistant-ui/: thread.tsx  threadlist-sidebar.tsx
backend/: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt  setup.py
backend/agents/: available_tools.py  config.py  mock_data.py  orchestrator.py
backend/agents/tools/: google_maps.py  preferences.py  scraper.py  sheets.py  weather.py
backend/api/: routes.py
backend/data/: .gitkeep  chat_history.json  user_preferences.json
backend/docs/: ARCHITECTURE.md  IMPORTS.md  IMPORT_STRUCTURE.md
backend/models/: activity.py  chat_history.py  preferences.py  schemas.py
backend/services/: activity_fetcher.py  chat_history_service.py  db.py  scraper_cache.py  scraper_job.py  scraper_scheduler.py  scraper_sites.py
backend/tests/: __init__.py  conftest.py  test_orchestrator.py
backend/utils/: datetime_utils.py
frontend/: .prettierrc.json  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/.husky/: pre-push
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/activities/: page.tsx
frontend/app/history/: page.tsx
frontend/contexts/: ThemeContext.tsx
frontend/lib/: api.ts
(+7 files in other folders)
