[project]
name = "activities-agent-backend"
version = "0.1.0"
description = "Activities Agent API backend"
requires-python = ">=3.11"

[tool.ruff]
# Same line length as Black default
line-length = 88
target-version = "py311"

# Exclude common non-source directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
]

[tool.ruff.lint]
# Enable common rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B904",   # raise from err - not needed for HTTPException wrappers
]

[tool.ruff.lint.per-file-ignores]
# These files need imports after load_dotenv() or sys.path modifications
"main.py" = ["E402"]
"services/activity_fetcher.py" = ["E402"]

[tool.ruff.lint.isort]
# Group imports: stdlib, third-party, first-party
known-first-party = ["agents", "api", "models", "services"]

[tool.ruff.format]
# Use double quotes (consistent with Black)
quote-style = "double"
indent-style = "space"

